tests/vertical-slice/reject/unknown_named_type.hew
// Reject: a function that uses a named user type with no known ValueClass.
// Under D10, this must be rejected at the MIR boundary with UnknownType,
// never reaching codegen with an "UnknownBlocked" value decision.
fn f(x: Foo) -> Foo {
    return x;
}
